tests/baselines/reference/genericInterfacesWithoutTypeArguments.errors.txt
genericInterfacesWithoutTypeArguments.ts(3,8): error TS2314: Generic type 'I<T>' requires 1 type argument(s).
genericInterfacesWithoutTypeArguments.ts(4,10): error TS2314: Generic type 'I<T>' requires 1 type argument(s).


==== genericInterfacesWithoutTypeArguments.ts (2 errors) ====
    interface I<T> { }
    class C<T> { }
    var i: I;
           ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    var c: C<I>;
             ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    